--- a/app/src/main/res/layout/fragment_my_page_video.xml
+++ b/app/src/main/res/layout/fragment_my_page_video.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/gradientbackground"
-    tools:context=".contribution.ExistingCompFragment">
+    tools:context=".home.myPage.MyPageVideosFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/existCompRecyclerView"
+        android:id="@+id/myPage_video_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</LinearLayout>
+</FrameLayout>
