--- a/app/src/main/res/layout/fragment_video_upload.xml
+++ b/app/src/main/res/layout/fragment_video_upload.xml
@@ -8,72 +8,71 @@
     android:orientation="vertical"
     tools:context=".contribution.record.VideoActivity">
 
-    <ScrollView
+    <!--<ScrollView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:weightSum="2"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <VideoView
+            android:id="@+id/uploadVideoPreviewView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="2"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-
-            <VideoView
-                android:id="@+id/uploadVideoPreviewView"
+            <TextView
+                android:id="@+id/uploadUserName"
                 android:layout_width="wrap_content"
-                android:layout_height="480dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="30dp"
-                android:layout_weight="1" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="8dp"
+                android:text="ユーザー名"
+                android:textColor="#fff"
+                android:textSize="24sp" />
+            <!--<EditText-->
+            <!--android:id="@+id/uploadEditText"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="textPersonName"-->
+            <!--android:hint="ユーザー名(暫定)を入力してください" />-->
 
-                <TextView
-                    android:id="@+id/uploadUserName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="ユーザー名"
-                    android:textColor="#fff"
-                    android:textSize="24sp" />
-                <!--<EditText-->
-                <!--android:id="@+id/uploadEditText"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:ems="10"-->
-                <!--android:inputType="textPersonName"-->
-                <!--android:hint="ユーザー名(暫定)を入力してください" />-->
+            <TextView
+                android:id="@+id/uploadVideoDuration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="8dp"
+                android:text="00:00:00"
+                android:textColor="#fff"
+                android:textSize="40sp"
+                android:textStyle="italic" />
 
-                <TextView
-                    android:id="@+id/uploadVideoDuration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="00:00:00"
-                    android:textColor="#fff"
-                    android:textSize="40sp"
-                    android:textStyle="italic" />
-
-                <Button
-                    android:id="@+id/uploadButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="60dp"
-                    android:background="@drawable/gradientbackground1"
-                    android:text="Upload"
-                    android:textColor="#fff" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/uploadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="60dp"
+                android:background="@drawable/gradientbackground1"
+                android:text="Upload"
+                android:textColor="#fff" />
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+    <!--</ScrollView>-->
 
 </android.support.constraint.ConstraintLayout>
