--- a/app/src/main/res/layout/recycler_item_comp_detail.xml
+++ b/app/src/main/res/layout/recycler_item_comp_detail.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginVertical="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginVertical="15dp"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
@@ -13,6 +14,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/bottom_navi_state_checked"
+            android:radius="10dp"
             android:orientation="vertical">
 
             <ImageView
@@ -24,6 +27,7 @@
                 android:id="@+id/compDetailRankImageView"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
+                android:background="#00565656"
                 android:layout_gravity="center"/>
 
             <TextView
@@ -51,7 +55,7 @@
                 android:text="@string/blank_user_name"
                 android:textAlignment="textEnd"
                 android:textSize="16sp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="15dp"
                 android:layout_marginRight="5dp"
                 android:textStyle="italic"
                 tools:ignore="RtlCompat" />
