--- a/app/src/main/res/layout-v26/fragment_comp_detail.xml
+++ b/app/src/main/res/layout-v26/fragment_comp_detail.xml
@@ -59,14 +59,14 @@
                 android:textColor="#737373"
                 android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/compDetailTagTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="競技のタグをここに表示します。(例) #おもしろ #大食い など"
-                android:textColor="#737373"
-                android:textSize="12sp" />
+            <!--<TextView-->
+                <!--android:id="@+id/compDetailTagTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginBottom="8dp"-->
+                <!--android:text="競技のタグをここに表示します。(例) #おもしろ #大食い など"-->
+                <!--android:textColor="#737373"-->
+                <!--android:textSize="12sp" />-->
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
@@ -84,12 +84,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/compDetailRecyclerView"
-        android:layout_width="352dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/compDetailCardView"
-        tools:ignore="MissingConstraints" />
-
+        app:layout_constraintBottom_toBottomOf="parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/compDetailRecyclerView"
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            tools:ignore="MissingConstraints" />
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
