--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -130,6 +130,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/myPage_follower_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="10dp"
