--- a/app/src/main/res/layout/recycler_item_comp.xml
+++ b/app/src/main/res/layout/recycler_item_comp.xml
@@ -47,14 +47,14 @@
                 android:textColor="#737373"
                 android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/comp_tag_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="競技のタグをここに表示します。(例) #おもしろ #大食い など"
-                android:textColor="#737373"
-                android:textSize="12sp" />
+            <!--<TextView-->
+                <!--android:id="@+id/comp_tag_textView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginBottom="8dp"-->
+                <!--android:text="競技のタグをここに表示します。(例) #おもしろ #大食い など"-->
+                <!--android:textColor="#737373"-->
+                <!--android:textSize="12sp" />-->
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
