--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,23 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <!--<item-->
-        <!--android:id="@+id/navi_menu"-->
-        <!--android:checkable="false"-->
-        <!--android:icon="@drawable/ic_dehaze_black_24dp"-->
-        <!--android:iconTint="@color/colorWhite"-->
-
-        <!--android:title="ナビメニュー"-->
-        <!--app:showAsAction="always" />-->
-
-    <item android:id="@+id/action_search"
-        android:orderInCategory="0"
-        android:title="検索"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:iconTint="#fff"
-        app:showAsAction="always"/>
-
-
-</menu>
+    xmlns:app="http://schemas.android.com/apk/res-auto"/>
