--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -10,6 +10,16 @@
     tools:context=".contribution.UploadFragment">
 
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="新しい競技を作成しよう!!"
+        android:gravity="center"/>
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="match_parent"
@@ -41,9 +51,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="#fff"
-        android:background="@drawable/gradientbackground"
+        android:background="@drawable/gradientbackground1"
         android:enabled="false"
-        android:text=" 新しく競技を作成する " />
+        android:text=" 新しく競技を作成 " />
 
 
     <TextView
