--- a/app/src/main/res/layout/activity_youtube.xml
+++ b/app/src/main/res/layout/activity_youtube.xml
@@ -36,6 +36,7 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginTop="65dp"
         android:background="@drawable/ic_arrow_back_24dp"
         android:backgroundTint="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
